--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
     "gulp-clean-css": "^4.2.0",
     "gulp-concat": "2.6.1",
     "gulp-uglify": "3.0.0",
-    "rimraf": "2.6.1"
-  },
-  "dependencies": {
+    "rimraf": "2.6.1",
     "sass": "^1.85.0"
   }
 }
