--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -41,20 +41,13 @@ steps:
     command: restore
     projects: $(projects)
 
-- task: DotNetCoreCLI@2
-  displayName: 'Build - Release'
-  inputs:
-    command: build
-    arguments: '--no-restore --configuration $(buildConfiguration)'
-    projects: $(projects)
+- template: templates/build.yml
+  parameters:
+    buildConfiguration: 'Debug'
 
-- task: DotNetCoreCLI@2
-  displayName: 'Publish'
-  inputs:
-    command: publish
-    projects: $(projects)
-    arguments: '--no-build --configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)/Release'
-    zipAfterPublish: true
+- template: templates/build.yml
+  parameters:
+    buildConfiguration: 'Release'
 
 - task: PublishBuildArtifacts@1
   displayName: 'Publish artifact: drop'
