--- a/azure-pipeline-cd.yml
+++ b/azure-pipeline-cd.yml
@@ -60,12 +60,11 @@ steps:
     publishTestResults: true
     projects: '**/*.Tests.csproj'
 
-- task: DotNetCoreCLI@2
+- task: reportgenerator@5
   displayName: 'Create code coverage report'
   inputs:
-    command: custom
-    custom: tool
-    arguments: 'run reportgenerator -reports:$(Build.SourcesDirectory)/**/coverage.cobertura.xml -targetdir:$(Build.SourcesDirectory)/CodeCoverage -reporttypes:HtmlInline_AzurePipelines'
+    reports: $(Build.SourcesDirectory)/**/coverage.cobertura.xml
+    targetdir: $(Build.SourcesDirectory)/CodeCoverage
 
 - task: PublishCodeCoverageResults@1
   displayName: 'Publish code coverage report'
