--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,6 +20,7 @@ steps:
   inputs:
     packageType: 'sdk'
     version: '6.x'
+
 - task: Npm@1
   displayName: 'Run npm install'
   inputs:
@@ -48,6 +49,25 @@ steps:
 - template: templates/build.yml
   parameters:
     buildConfiguration: 'Release'
+
+- task: DotNetCoreCLI@2
+  displayName: 'Pack the project $(buildConfiguration)'
+  inputs:
+    command: pack
+    projects: $(projects)
+    arguments: '--no-build --configuration $(buildConfiguration)'
+    versioningScheme: byPrereleaseNumber
+    majorVersion: '1'
+    minorVersion: '0'
+    patchVersion: '0'
+
+- task: NuGetCommand@2
+  displayName: 'Publish nuget package'
+  inputs:
+    command: push
+    packagesToPush: '$(Build.ArtifactStagingDirectory)/**/*.nupkg'
+    publishVstsFeed: 'Tailspin.SpaceGame.Web.Models'
+  condition: succeeded()
 
 - task: PublishBuildArtifacts@1
   displayName: 'Publish artifact: drop'
